package org.raccoons.backyards;

public abstract class Paint {
}
