@startuml

title __GEOMETRY's Class Diagram__\n

  package org.raccoons.backyards {
    class Circle {
    }
  }
  

  package org.raccoons.backyards {
    class Color {
    }
  }
  

  package org.raccoons.backyards {
    class GeometryShapes {
    }
  }
  

  package org.raccoons.backyards {
    class LAFDefaults {
    }
  }
  

  package org.raccoons.backyards {
    class Layer {
    }
  }
  

  package org.raccoons.backyards {
    class Line {
    }
  }
  

  package org.raccoons.backyards {
    class MultiLayeredImage {
    }
  }
  

  package org.raccoons.backyards {
    class Node {
    }
  }
  

  package org.raccoons.backyards {
    abstract class Paint {
    }
  }
  

  package org.raccoons.backyards {
    class Point {
    }
  }
  

  package org.raccoons.backyards {
    class Rectangle {
    }
  }
  

  package org.raccoons.backyards {
    abstract class Shape {
    }
  }
  

  package org.raccoons.backyards {
    class Stroke {
    }
  }
  

  package org.raccoons.backyards {
    class Style {
    }
  }
  

  package org.raccoons.backyards {
    class Transformation {
    }
  }
  

  Circle -up-|> Shape
  Circle o-- Point : center
  Color -up-|> Paint
  Layer -up-|> Iterable
  Layer o-- Style : layerStyle
  Line -up-|> Shape
  Line o-- Point : start
  Line o-- Point : end
  MultiLayeredImage -up-|> Iterable
  Node o-- Shape : nodeShape
  Node o-- Style : nodeStyle
  Node o-- Transformation : nodeTransformation
  Point -up-|> Shape
  Rectangle -up-|> Shape
  Rectangle o-- Point : position
  Shape o-- Paint : fill
  Shape o-- Stroke : stroke


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
